--- a/Sources/Info.plist
+++ b/Sources/Info.plist
@@ -9,7 +9,7 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.5</string>
+    <string>1.0.6-dev</string>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>LSUIElement</key>
